        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=22380
        Fix WorkerContext refcounting

        * dom/WorkerContext.cpp:
        (WebCore::WorkerContext::WorkerContext):
        * dom/WorkerContext.h:
        (WebCore::WorkerContext::script):
        (WebCore::WorkerContext::clearScript):
        Added a method to manually destroy WorkerSctriptController.

        * dom/WorkerThread.cpp: (WebCore::WorkerThread::workerThread):
        Destroy WorkerScriptController to release any references to WorkerContext.



Canonical link: https://commits.webkit.org/30835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38626 268f45cc-cd09-0410-ab3c-d52691b4dbfc